[package]
name = "sandbox-scout"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.11"
anyhow = "1.0.81"
tokio = { version = "1", features = ["full"] }
sysinfo = "0.30.7"
inside-vm_arch_support = "0.3.2"
